# multidimensional-evaluation-engine

./: CHANGELOG.md  CITATION.cff  README.md  SE_MANIFEST.toml  pyproject.toml  zensical.toml
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  release.yml
data/raw/: candidates.csv  policy.toml
docs/: index.md
docs/en/: api.md  concepts.md  examples.md  index.md  troubleshooting.md
src/multidimensional_evaluation_engine/: __init__.py
src/multidimensional_evaluation_engine/domain/: candidates.py  factors.py  results.py  scenario.py
src/multidimensional_evaluation_engine/evaluation/: __init__.py  evaluator.py
src/multidimensional_evaluation_engine/io/: load_candidates.py  load_policy.py
src/multidimensional_evaluation_engine/policy/: __init__.py  policy.py
src/multidimensional_evaluation_engine/reporting/: tables.py
src/multidimensional_evaluation_engine/scenarios/: __init__.py  example.py
src/multidimensional_evaluation_engine/utils/: logging_utils.py
tests/: builders.py  test_evaluator.py  test_load_candidates.py  test_load_policy.py  test_models.py  test_tables.py
